--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "client-vector-search": "^0.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "11.9.0",
     "next": "15.3.3",
     "react": "19.0.0",
