--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
     "client-vector-search": "^0.2.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "11.9.0",
+    "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
@@ -30,6 +36,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.12",
     "tailwindcss": "4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "5"
   }
 }
